Fixing alignment and font; add another example;

--- a/src/less/select/ds6/select-base.less
+++ b/src/less/select/ds6/select-base.less
@@ -7,7 +7,7 @@
         .background-icon-base;
         .icon-chevron-down-bold(9px, 40px);
 
-        background-position: right center;
+        background-position: right calc(50% ~"-" 1px);
         content: "";
         margin-left: 8px;
         pointer-events: none;
@@ -22,11 +22,12 @@
     background-color: #fff;
     border: 1px solid #c7c7c7;
     border-radius: 0;
+    font-family: @ds6-font-family-custom; // for some reason this needs to be explicitly set
     font-size: 16px;
     height: 40px;
+    margin-top: -1px; // account for the border
     padding: 8px 30px 8px 16px;
-    vertical-align: top;
-
+    
     &:focus {
         border-color: @ds6-color-p004-blue;
         outline: none;
